--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -14,7 +14,88 @@
   <![endif]-->
 </head>
 
-  <body>
+<body>
+
+  <nav class="navigation">
+    <a href="#">Services</a><a>
+    </a><a href="#">Product</a><a>
+    </a><a href="#">Vision</a><a>
+    </a><a href="#">Features</a><a>
+    </a><a href="#">About</a><a>
+    </a><a href="#">Contact</a><a>
+
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </a></nav><a>
+
+  <section class="head">
+    <div>
+      <h1>Innovation</h1>
+      <h1>On</h1>
+      <h1>Demand</h1>
+
+      <button type="button" name="button">Get Started</button>
+    </div>
+
+
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+
+  </section>
+
+  <hr>
+
+  <section class="info">
+
+    <div class="features">
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+    <div class="about">
+      <h2>About</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+  </section>
+
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  <section class="bottom">
+    <div class="services">
+      <h2>Services</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+    <div class="product">
+      <h2>Product</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+    <div class="vision">
+      <h2>Vision</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+  </section>
+
+  <hr>
+
+  <address class="">
+    <h3>Contact</h3><br>
+    <p>123 Way 456 Street<br>
+    Somewhere, USA</p><br>
+    <p class="phone">1 (888) 888-8888</p><br>
+    sales@greatidea.io<br>
+  </address>
+
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
+
+
+
+</body>
+
+<!--  <body>
 
   Services
   Product
@@ -40,7 +121,7 @@
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
+
   Services
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
@@ -58,6 +139,6 @@
   sales@greatidea.io
 
   Copyright Great Idea! 2018
-  
-  </body>
+
+</body>-->
 </html>
